small changes to plot

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -286,169 +286,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/lennartriedel/opt/anaconda3/lib/python3.9/site-packages/pandas/core/arraylike.py:364: RuntimeWarning: invalid value encountered in log2\n",
-      "  result = getattr(ufunc, method)(*inputs, **kwargs)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>meantemp</th>\n",
-       "      <th>humidity</th>\n",
-       "      <th>wind_speed</th>\n",
-       "      <th>meanpressure</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2013-01-01</td>\n",
-       "      <td>10.000000</td>\n",
-       "      <td>84.500000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>9.988211</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2013-01-02</td>\n",
-       "      <td>7.400000</td>\n",
-       "      <td>92.000000</td>\n",
-       "      <td>2.980000</td>\n",
-       "      <td>9.991238</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2013-01-03</td>\n",
-       "      <td>7.166667</td>\n",
-       "      <td>87.000000</td>\n",
-       "      <td>4.633333</td>\n",
-       "      <td>9.992466</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2013-01-04</td>\n",
-       "      <td>8.666667</td>\n",
-       "      <td>71.333333</td>\n",
-       "      <td>1.233333</td>\n",
-       "      <td>9.990340</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2013-01-05</td>\n",
-       "      <td>6.000000</td>\n",
-       "      <td>86.833333</td>\n",
-       "      <td>3.700000</td>\n",
-       "      <td>9.989394</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1457</th>\n",
-       "      <td>2016-12-28</td>\n",
-       "      <td>17.217391</td>\n",
-       "      <td>68.043478</td>\n",
-       "      <td>3.547826</td>\n",
-       "      <td>9.988067</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1458</th>\n",
-       "      <td>2016-12-29</td>\n",
-       "      <td>15.238095</td>\n",
-       "      <td>87.857143</td>\n",
-       "      <td>6.000000</td>\n",
-       "      <td>9.989969</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1459</th>\n",
-       "      <td>2016-12-30</td>\n",
-       "      <td>14.095238</td>\n",
-       "      <td>89.666667</td>\n",
-       "      <td>6.266667</td>\n",
-       "      <td>9.991387</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1460</th>\n",
-       "      <td>2016-12-31</td>\n",
-       "      <td>15.052632</td>\n",
-       "      <td>87.000000</td>\n",
-       "      <td>7.325000</td>\n",
-       "      <td>9.988827</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1461</th>\n",
-       "      <td>2017-01-01</td>\n",
-       "      <td>10.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>9.988685</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1462 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            date   meantemp    humidity  wind_speed  meanpressure\n",
-       "0     2013-01-01  10.000000   84.500000    0.000000      9.988211\n",
-       "1     2013-01-02   7.400000   92.000000    2.980000      9.991238\n",
-       "2     2013-01-03   7.166667   87.000000    4.633333      9.992466\n",
-       "3     2013-01-04   8.666667   71.333333    1.233333      9.990340\n",
-       "4     2013-01-05   6.000000   86.833333    3.700000      9.989394\n",
-       "...          ...        ...         ...         ...           ...\n",
-       "1457  2016-12-28  17.217391   68.043478    3.547826      9.988067\n",
-       "1458  2016-12-29  15.238095   87.857143    6.000000      9.989969\n",
-       "1459  2016-12-30  14.095238   89.666667    6.266667      9.991387\n",
-       "1460  2016-12-31  15.052632   87.000000    7.325000      9.988827\n",
-       "1461  2017-01-01  10.000000  100.000000    0.000000      9.988685\n",
-       "\n",
-       "[1462 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Data preparation\n",
     "## Detection and removal of outliers\n",
     "\n",
     "## Normalization?\n",
-    "df_train['meanpressure'] = np.log2(df_train['meanpressure'])\n",
-    "\n",
-    "df_train"
+    "# df_train['meanpressure'] = np.log2(df_train['meanpressure'])\n",
+    "\n"
    ]
   }
  ],
