outlier removal and normalization

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
     }
    ],
    "source": [
-    "# Visualization of input data\n",
+    "# Visualization of input data before preparation\n",
     "\n",
     "df_total = df_train.append(df_test)\n",
     "\n",
@@ -286,16 +286,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/sr/zp7gplfs60bd6wccb6xk6w5c0000gn/T/ipykernel_31610/1283757719.py:17: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_filtered_train['meanpressure'] = np.log2(df_filtered_train['meanpressure'])\n",
+      "/var/folders/sr/zp7gplfs60bd6wccb6xk6w5c0000gn/T/ipykernel_31610/1283757719.py:18: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_filtered_test['meanpressure'] = np.log2(df_filtered_test['meanpressure'])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>meantemp</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>wind_speed</th>\n",
+       "      <th>meanpressure</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>110.000000</td>\n",
+       "      <td>110.000000</td>\n",
+       "      <td>110.000000</td>\n",
+       "      <td>110.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>21.792884</td>\n",
+       "      <td>55.878250</td>\n",
+       "      <td>8.215765</td>\n",
+       "      <td>9.983460</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>6.242458</td>\n",
+       "      <td>18.799322</td>\n",
+       "      <td>3.595474</td>\n",
+       "      <td>0.007802</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>17.750000</td>\n",
+       "      <td>1.387500</td>\n",
+       "      <td>9.965604</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>16.593750</td>\n",
+       "      <td>39.625000</td>\n",
+       "      <td>5.642000</td>\n",
+       "      <td>9.976947</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>19.906250</td>\n",
+       "      <td>56.937500</td>\n",
+       "      <td>8.218750</td>\n",
+       "      <td>9.984047</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>27.705357</td>\n",
+       "      <td>70.839674</td>\n",
+       "      <td>10.068750</td>\n",
+       "      <td>9.989547</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>34.250000</td>\n",
+       "      <td>95.833333</td>\n",
+       "      <td>19.314286</td>\n",
+       "      <td>9.996882</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         meantemp    humidity  wind_speed  meanpressure\n",
+       "count  110.000000  110.000000  110.000000    110.000000\n",
+       "mean    21.792884   55.878250    8.215765      9.983460\n",
+       "std      6.242458   18.799322    3.595474      0.007802\n",
+       "min     11.000000   17.750000    1.387500      9.965604\n",
+       "25%     16.593750   39.625000    5.642000      9.976947\n",
+       "50%     19.906250   56.937500    8.218750      9.984047\n",
+       "75%     27.705357   70.839674   10.068750      9.989547\n",
+       "max     34.250000   95.833333   19.314286      9.996882"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Data preparation\n",
-    "## Detection and removal of outliers\n",
     "\n",
-    "## Normalization?\n",
-    "# df_train['meanpressure'] = np.log2(df_train['meanpressure'])\n",
-    "\n"
+    "## Detection and removal of outliers\n",
+    "q_low_train = df_train[\"meanpressure\"].quantile(0.01)\n",
+    "q_hi_train  = df_train[\"meanpressure\"].quantile(0.99)\n",
+    "\n",
+    "df_filtered_train = df_train[(df_train[\"meanpressure\"] < q_hi_train) & (df_train[\"meanpressure\"] > q_low_train)]\n",
+    "\n",
+    "q_low_test = df_test[\"meanpressure\"].quantile(0.01)\n",
+    "q_hi_test  = df_test[\"meanpressure\"].quantile(0.99)\n",
+    "\n",
+    "df_filtered_test = df_test[(df_test[\"meanpressure\"] < q_hi_test) & (df_test[\"meanpressure\"] > q_low_test)]\n",
+    "\n",
+    "\n",
+    "\n",
+    "##Normalization\n",
+    "df_filtered_train['meanpressure'] = np.log2(df_filtered_train['meanpressure'])\n",
+    "df_filtered_test['meanpressure'] = np.log2(df_filtered_test['meanpressure'])\n",
+    "\n",
+    "df_filtered_test.describe()"
    ]
   }
  ],
