--- a/src/GP_Background.ipynb
+++ b/src/GP_Background.ipynb
@@ -205,23 +205,23 @@
     }
    ],
    "source": [
-    "# visualize the influence of sigma on the covariance matrix \n",
-    "sigma_lst = [0.5,1,5]\n",
+    "# visualize the influence of sigma on the covariance matrix\n",
+    "sigma_lst = [0.5, 1, 5]\n",
     "\n",
     "fig, (ax1, ax2, ax3, ax4) = plt.subplots(1, 4, figsize=(16, 3.6))\n",
     "\n",
-    "for i,ax in enumerate([ax1, ax2, ax3]):\n",
+    "for i, ax in enumerate([ax1, ax2, ax3]):\n",
     "    xlim = (-3, 3)\n",
     "    X = np.linspace(*xlim, 25)\n",
     "    covMat = get_covMat(X, X, rbf_kernel(sigma_lst[i]))\n",
     "\n",
     "    im = ax.imshow(covMat, cmap=cm.coolwarm)\n",
     "    cbar = plt.colorbar(im, ax=ax, fraction=0.045, pad=0.05)\n",
-    "    cbar.ax.set_ylabel('$K(x,x)$')\n",
-    "    ax.set_title(f'Covariance of the RBF Kernel \\n with $\\sigma = {sigma_lst[i]}$')\n",
-    "    ticks = list(range(xlim[0], xlim[1]+1))\n",
-    "    ax.set_xticks(np.linspace(0, len(X)-1, len(ticks)))\n",
-    "    ax.set_yticks(np.linspace(0, len(X)-1, len(ticks)))\n",
+    "    cbar.ax.set_ylabel(\"$K(x,x)$\")\n",
+    "    ax.set_title(f\"Covariance of the RBF Kernel \\n with $\\sigma = {sigma_lst[i]}$\")\n",
+    "    ticks = list(range(xlim[0], xlim[1] + 1))\n",
+    "    ax.set_xticks(np.linspace(0, len(X) - 1, len(ticks)))\n",
+    "    ax.set_yticks(np.linspace(0, len(X) - 1, len(ticks)))\n",
     "    ax.set_xticklabels(ticks)\n",
     "    ax.set_yticklabels(ticks)\n",
     "    ax.grid(False)\n",
@@ -232,10 +232,10 @@
     "    zero = np.array([[0]])\n",
     "    covMat0 = get_covMat(X, zero, rbf_kernel(sigma_lst[i]))\n",
     "    # Make the plots\n",
-    "    ax4.plot(X[:,0], covMat0[:,0], label=f'$\\sigma = {sigma_lst[i]}$')\n",
-    "ax4.set_xlabel('x')\n",
-    "ax4.set_ylabel('$k(x,0)$')\n",
-    "ax4.set_title('Covariance between $x$ and $0$')\n",
+    "    ax4.plot(X[:, 0], covMat0[:, 0], label=f\"$\\sigma = {sigma_lst[i]}$\")\n",
+    "ax4.set_xlabel(\"x\")\n",
+    "ax4.set_ylabel(\"$k(x,0)$\")\n",
+    "ax4.set_title(\"Covariance between $x$ and $0$\")\n",
     "ax4.set_ylim([0, 1.1])\n",
     "ax4.set_xlim(*xlim)\n",
     "ax4.legend(loc=1)\n",
@@ -261,8 +261,8 @@
     }
    ],
    "source": [
-    "n_samples = 151  \n",
-    "n_functions = 5  \n",
+    "n_samples = 151\n",
+    "n_functions = 5\n",
     "\n",
     "fig, (ax1, ax2, ax3) = plt.subplots(3, 1, figsize=(16, 10))\n",
     "for i, ax in enumerate([ax1, ax2, ax3]):\n",
@@ -270,11 +270,19 @@
     "    covMat = get_covMat(X, X, rbf_kernel(sigma_lst[i]))\n",
     "    y = np.random.multivariate_normal(mean=np.zeros(n_samples), cov=covMat)\n",
     "    for _ in range(n_functions):\n",
-    "        ax.plot(X, np.random.multivariate_normal(mean=np.zeros(n_samples), cov=covMat), linestyle='-', marker='o', markersize=3)\n",
-    "        \n",
-    "    ax.set_xlabel('$x$')\n",
-    "    ax.set_ylabel('$y = f(x)$')\n",
-    "    ax.set_title(f'{n_functions} function realizations sampled utilizing the RBF Kernel with $\\sigma = {sigma_lst[i]}$')\n",
+    "        ax.plot(\n",
+    "            X,\n",
+    "            np.random.multivariate_normal(mean=np.zeros(n_samples), cov=covMat),\n",
+    "            linestyle=\"-\",\n",
+    "            marker=\"o\",\n",
+    "            markersize=3,\n",
+    "        )\n",
+    "\n",
+    "    ax.set_xlabel(\"$x$\")\n",
+    "    ax.set_ylabel(\"$y = f(x)$\")\n",
+    "    ax.set_title(\n",
+    "        f\"{n_functions} function realizations sampled utilizing the RBF Kernel with $\\sigma = {sigma_lst[i]}$\"\n",
+    "    )\n",
     "    ax.set_xlim([-5, 5])\n",
     "\n",
     "fig.tight_layout()\n",
@@ -357,7 +365,7 @@
     "# Gaussian process posterior\n",
     "def GP(X1, y1, X2, kernel):\n",
     "    # calc covariance matrices\n",
-    "    covMat_11 = get_covMat(X1, X1, kernel) \n",
+    "    covMat_11 = get_covMat(X1, X1, kernel)\n",
     "    covMat_21 = get_covMat(X2, X1, kernel)\n",
     "    covMat_12 = covMat_21.T\n",
     "    covMat_22 = get_covMat(X2, X2, kernel)\n",
@@ -366,8 +374,8 @@
     "    m_2 = covMat_21 @ np.linalg.inv(covMat_11) @ y1\n",
     "    # calc the posterior covariance\n",
     "    covMat_2 = covMat_22 - covMat_21 @ np.linalg.inv(covMat_11) @ covMat_12\n",
-    "    \n",
-    "    return m_2, covMat_2  "
+    "\n",
+    "    return m_2, covMat_2"
    ]
   },
   {
@@ -385,7 +393,7 @@
     "domain = (-6, 6)\n",
     "\n",
     "# generate training data\n",
-    "X1 = np.random.uniform(domain[0]+2, domain[1]-2, size=(n1, 1))\n",
+    "X1 = np.random.uniform(domain[0] + 2, domain[1] - 2, size=(n1, 1))\n",
     "y1 = func(X1)\n",
     "# predict points at uniform spacing to capture function\n",
     "X2 = np.linspace(domain[0], domain[1], n2).reshape(-1, 1)\n",
@@ -396,7 +404,9 @@
     "\n",
     "n_realizations = 125  # number of realizations in the background\n",
     "# get data for n_realizations realizations\n",
-    "y_realizations = np.random.multivariate_normal(mean=m_2, cov=covMat_2, size=n_realizations)"
+    "y_realizations = np.random.multivariate_normal(\n",
+    "    mean=m_2, cov=covMat_2, size=n_realizations\n",
+    ")"
    ]
   },
   {
@@ -417,22 +427,34 @@
    ],
    "source": [
     "# plot the posterior distribution with a 2 stdev confidence interval and realizations in the background\n",
-    "fig, ax1,  = plt.subplots(nrows=1, ncols=1, figsize=(16, 4))\n",
+    "(\n",
+    "    fig,\n",
+    "    ax1,\n",
+    ") = plt.subplots(nrows=1, ncols=1, figsize=(16, 4))\n",
     "\n",
     "# realizations in the background\n",
-    "ax1.fill_between(X2.flat, m_2-0*st_dev, m_2+0*st_dev, color='red', alpha=0.05, label='$2 \\sigma$')\n",
-    "for i in range(1,5):\n",
-    "    ax1.fill_between(X2.flat, m_2-0.5*i*st_dev, m_2+0.5*i*st_dev, color='red', alpha=0.05)\n",
+    "ax1.fill_between(\n",
+    "    X2.flat,\n",
+    "    m_2 - 0 * st_dev,\n",
+    "    m_2 + 0 * st_dev,\n",
+    "    color=\"red\",\n",
+    "    alpha=0.05,\n",
+    "    label=\"$2 \\sigma$\",\n",
+    ")\n",
+    "for i in range(1, 5):\n",
+    "    ax1.fill_between(\n",
+    "        X2.flat, m_2 - 0.5 * i * st_dev, m_2 + 0.5 * i * st_dev, color=\"red\", alpha=0.05\n",
+    "    )\n",
     "# original function\n",
-    "ax1.plot(X2, func(X2), 'b--', label='$sin(x)$')\n",
+    "ax1.plot(X2, func(X2), \"b--\", label=\"$sin(x)$\")\n",
     "\n",
-    "#confidence interval of 2 stdev\n",
+    "# confidence interval of 2 stdev\n",
     "\n",
-    "ax1.plot(X2, m_2, 'r-', lw=2, label='$\\mu^{*}$')\n",
-    "ax1.plot(X1, y1, 'ko', linewidth=2, label='$(x_n, y_n)$')\n",
-    "ax1.set_xlabel('$x$')\n",
-    "ax1.set_ylabel('$f(x)$')\n",
-    "ax1.set_title('Gaussian Process Regression with Noise')\n",
+    "ax1.plot(X2, m_2, \"r-\", lw=2, label=\"$\\mu^{*}$\")\n",
+    "ax1.plot(X1, y1, \"ko\", linewidth=2, label=\"$(x_n, y_n)$\")\n",
+    "ax1.set_xlabel(\"$x$\")\n",
+    "ax1.set_ylabel(\"$f(x)$\")\n",
+    "ax1.set_title(\"Gaussian Process Regression with Noise\")\n",
     "ax1.axis([domain[0], domain[1], -3, 3])\n",
     "ax1.legend(loc=2)\n",
     "plt.tight_layout()\n",
@@ -459,13 +481,25 @@
    ],
    "source": [
     "# realizations of the Gaussian process so showcase the confidence interval\n",
-    "fig, ax1,  = plt.subplots(nrows=1, ncols=1, figsize=(16, 4))\n",
+    "(\n",
+    "    fig,\n",
+    "    ax1,\n",
+    ") = plt.subplots(nrows=1, ncols=1, figsize=(16, 4))\n",
     "for i in range(5):\n",
-    "    ax1.fill_between(X2.flat, m_2-0.5*i*st_dev, m_2+0.5*i*st_dev, color='red', alpha=0.1, label='$2 \\sigma$')\n",
-    "ax1.plot(X2, y_realizations.T, '-', color='gray', alpha=0.12)\n",
-    "ax1.set_xlabel('$x$')\n",
-    "ax1.set_ylabel('$f(x)$')\n",
-    "ax1.set_title('Random realizations from the posterior with different confidence intervals')\n",
+    "    ax1.fill_between(\n",
+    "        X2.flat,\n",
+    "        m_2 - 0.5 * i * st_dev,\n",
+    "        m_2 + 0.5 * i * st_dev,\n",
+    "        color=\"red\",\n",
+    "        alpha=0.1,\n",
+    "        label=\"$2 \\sigma$\",\n",
+    "    )\n",
+    "ax1.plot(X2, y_realizations.T, \"-\", color=\"gray\", alpha=0.12)\n",
+    "ax1.set_xlabel(\"$x$\")\n",
+    "ax1.set_ylabel(\"$f(x)$\")\n",
+    "ax1.set_title(\n",
+    "    \"Random realizations from the posterior with different confidence intervals\"\n",
+    ")\n",
     "ax1.axis([domain[0], domain[1], -3, 3])\n",
     "ax1.set_xlim([-6, 6])\n",
     "plt.tight_layout()\n",
@@ -489,16 +523,24 @@
     "# Gaussian process posterior\n",
     "def GP_noise(X1, y1, X2, kernel, sigma_noise):\n",
     "    # calc covariance matrices\n",
-    "    covMat_11 = get_covMat(X1, X1, kernel) \n",
+    "    covMat_11 = get_covMat(X1, X1, kernel)\n",
     "    covMat_21 = get_covMat(X2, X1, kernel)\n",
     "    covMat_12 = covMat_21.T\n",
     "    covMat_22 = get_covMat(X2, X2, kernel)\n",
     "\n",
     "    # calc posterior mean\n",
-    "    m_2 = covMat_21 @ np.linalg.inv(covMat_11+ np.eye(len(covMat_11))*sigma_noise**2) @ y1\n",
+    "    m_2 = (\n",
+    "        covMat_21\n",
+    "        @ np.linalg.inv(covMat_11 + np.eye(len(covMat_11)) * sigma_noise**2)\n",
+    "        @ y1\n",
+    "    )\n",
     "    # calc the posterior covariance\n",
-    "    covMat_2 = covMat_22 + np.eye(len(covMat_22))* sigma_noise**2 - covMat_21 @ np.linalg.inv(covMat_11) @ covMat_12\n",
-    "    \n",
+    "    covMat_2 = (\n",
+    "        covMat_22\n",
+    "        + np.eye(len(covMat_22)) * sigma_noise**2\n",
+    "        - covMat_21 @ np.linalg.inv(covMat_11) @ covMat_12\n",
+    "    )\n",
+    "\n",
     "    return m_2, covMat_2  # mean, covariance"
    ]
   },
@@ -517,7 +559,7 @@
     "domain = (-6, 6)\n",
     "\n",
     "# generate training data\n",
-    "X1 = np.random.uniform(domain[0]+2, domain[1]-2, size=(n1, 1))\n",
+    "X1 = np.random.uniform(domain[0] + 2, domain[1] - 2, size=(n1, 1))\n",
     "y1 = func(X1)\n",
     "# predict points at uniform spacing to capture function\n",
     "X2 = np.linspace(domain[0], domain[1], n2).reshape(-1, 1)\n",
@@ -528,7 +570,9 @@
     "\n",
     "n_realizations = 75  # number of realizations in the background\n",
     "# get data for n_realizations realizations\n",
-    "y_realizations = np.random.multivariate_normal(mean=m_2, cov=covMat_2, size=n_realizations)"
+    "y_realizations = np.random.multivariate_normal(\n",
+    "    mean=m_2, cov=covMat_2, size=n_realizations\n",
+    ")"
    ]
   },
   {
@@ -551,24 +595,36 @@
    ],
    "source": [
     "# plot the posterior distribution with a 2 stdev confidence interval and realizations in the background\n",
-    "fig, ax1,  = plt.subplots(nrows=1, ncols=1, figsize=(16, 4))\n",
+    "(\n",
+    "    fig,\n",
+    "    ax1,\n",
+    ") = plt.subplots(nrows=1, ncols=1, figsize=(16, 4))\n",
     "\n",
     "# realizations in the background\n",
-    "#ax1.plot(X2, y_realizations.T, alpha=0.1, color='gray')\n",
+    "# ax1.plot(X2, y_realizations.T, alpha=0.1, color='gray')\n",
     "\n",
-    "ax1.fill_between(X2.flat, m_2-0*st_dev, m_2+0*st_dev, color='red', alpha=0.05, label='$2 \\sigma$')\n",
-    "for i in range(1,5):\n",
-    "    ax1.fill_between(X2.flat, m_2-0.5*i*st_dev, m_2+0.5*i*st_dev, color='red', alpha=0.05)\n",
+    "ax1.fill_between(\n",
+    "    X2.flat,\n",
+    "    m_2 - 0 * st_dev,\n",
+    "    m_2 + 0 * st_dev,\n",
+    "    color=\"red\",\n",
+    "    alpha=0.05,\n",
+    "    label=\"$2 \\sigma$\",\n",
+    ")\n",
+    "for i in range(1, 5):\n",
+    "    ax1.fill_between(\n",
+    "        X2.flat, m_2 - 0.5 * i * st_dev, m_2 + 0.5 * i * st_dev, color=\"red\", alpha=0.05\n",
+    "    )\n",
     "# original function\n",
-    "ax1.plot(X2, func(X2), 'b--', label='$sin(x)$')\n",
+    "ax1.plot(X2, func(X2), \"b--\", label=\"$sin(x)$\")\n",
     "\n",
-    "#confidence interval of 2 stdev\n",
+    "# confidence interval of 2 stdev\n",
     "\n",
-    "ax1.plot(X2, m_2, 'r-', lw=2, label='$\\mu^{*}$')\n",
-    "ax1.plot(X1, y1, 'ko', linewidth=2, label='$(x_n, y_n)$')\n",
-    "ax1.set_xlabel('$x$')\n",
-    "ax1.set_ylabel('$f(x)$')\n",
-    "ax1.set_title('Gaussian Process Regression with Noise')\n",
+    "ax1.plot(X2, m_2, \"r-\", lw=2, label=\"$\\mu^{*}$\")\n",
+    "ax1.plot(X1, y1, \"ko\", linewidth=2, label=\"$(x_n, y_n)$\")\n",
+    "ax1.set_xlabel(\"$x$\")\n",
+    "ax1.set_ylabel(\"$f(x)$\")\n",
+    "ax1.set_title(\"Gaussian Process Regression with Noise\")\n",
     "ax1.axis([domain[0], domain[1], -3, 3])\n",
     "ax1.legend(loc=2)\n",
     "plt.tight_layout()\n",
@@ -595,13 +651,25 @@
    ],
    "source": [
     "# realizations of the Gaussian process so showcase the confidence interval\n",
-    "fig, ax1,  = plt.subplots(nrows=1, ncols=1, figsize=(16, 4))\n",
+    "(\n",
+    "    fig,\n",
+    "    ax1,\n",
+    ") = plt.subplots(nrows=1, ncols=1, figsize=(16, 4))\n",
     "for i in range(5):\n",
-    "    ax1.fill_between(X2.flat, m_2-0.5*i*st_dev, m_2+0.5*i*st_dev, color='red', alpha=0.1, label='$2 \\sigma$')\n",
-    "ax1.plot(X2, y_realizations.T, '-', color='gray', alpha=0.12)\n",
-    "ax1.set_xlabel('$x$')\n",
-    "ax1.set_ylabel('$f(x)$')\n",
-    "ax1.set_title('Random realizations from the posterior with different confidence intervals')\n",
+    "    ax1.fill_between(\n",
+    "        X2.flat,\n",
+    "        m_2 - 0.5 * i * st_dev,\n",
+    "        m_2 + 0.5 * i * st_dev,\n",
+    "        color=\"red\",\n",
+    "        alpha=0.1,\n",
+    "        label=\"$2 \\sigma$\",\n",
+    "    )\n",
+    "ax1.plot(X2, y_realizations.T, \"-\", color=\"gray\", alpha=0.12)\n",
+    "ax1.set_xlabel(\"$x$\")\n",
+    "ax1.set_ylabel(\"$f(x)$\")\n",
+    "ax1.set_title(\n",
+    "    \"Random realizations from the posterior with different confidence intervals\"\n",
+    ")\n",
     "ax1.axis([domain[0], domain[1], -3, 3])\n",
     "ax1.set_xlim([-6, 6])\n",
     "plt.tight_layout()\n",
@@ -648,14 +716,14 @@
     "from scipy.stats import norm\n",
     "from matplotlib import cm\n",
     "\n",
-    "x_3d= X2\n",
-    "y_3d= np.arange(-3,3,0.001)\n",
-    "x_3d, y_3d= np.meshgrid(x_3d,y_3d)\n",
+    "x_3d = X2\n",
+    "y_3d = np.arange(-3, 3, 0.001)\n",
+    "x_3d, y_3d = np.meshgrid(x_3d, y_3d)\n",
     "z_3d = norm.pdf(y_3d, m_2, st_dev)\n",
     "\n",
-    "fig, ax = plt.subplots(subplot_kw={\"projection\":\"3d\"},  figsize=(16, 16))\n",
-    "surf = ax.plot_surface(x_3d,y_3d,z_3d, cmap=cm.coolwarm, rstride=5,cstride=5)\n",
-    "ax.set_zlim([0,10])"
+    "fig, ax = plt.subplots(subplot_kw={\"projection\": \"3d\"}, figsize=(16, 16))\n",
+    "surf = ax.plot_surface(x_3d, y_3d, z_3d, cmap=cm.coolwarm, rstride=5, cstride=5)\n",
+    "ax.set_zlim([0, 10])"
    ]
   },
   {
