--- a/src/GP_Playground.ipynb
+++ b/src/GP_Playground.ipynb
@@ -17,9 +17,16 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "\n",
     "# from sklearn.preprocessing import StandardScaler\n",
     "import sklearn.gaussian_process as gp\n",
-    "from sklearn.gaussian_process.kernels import RBF, WhiteKernel, ExpSineSquared, ConstantKernel, Matern"
+    "from sklearn.gaussian_process.kernels import (\n",
+    "    RBF,\n",
+    "    WhiteKernel,\n",
+    "    ExpSineSquared,\n",
+    "    ConstantKernel,\n",
+    "    Matern,\n",
+    ")"
    ]
   },
   {
@@ -36,8 +43,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_test = pd.read_csv(r\"C:\\Users\\basti\\OneDrive\\Documents\\Prob ML Projekt\\prob-ml-project\\data\\DailyDelhiClimateTest.csv\")\n",
-    "df_train = pd.read_csv(r\"C:\\Users\\basti\\OneDrive\\Documents\\Prob ML Projekt\\prob-ml-project\\data\\DailyDelhiClimateTrain.csv\")"
+    "df_test = pd.read_csv(\n",
+    "    r\"C:\\Users\\basti\\OneDrive\\Documents\\Prob ML Projekt\\prob-ml-project\\data\\DailyDelhiClimateTest.csv\"\n",
+    ")\n",
+    "df_train = pd.read_csv(\n",
+    "    r\"C:\\Users\\basti\\OneDrive\\Documents\\Prob ML Projekt\\prob-ml-project\\data\\DailyDelhiClimateTrain.csv\"\n",
+    ")"
    ]
   },
   {
@@ -205,8 +216,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mapping = {1: 'January', 2: 'February', 3: 'March', 4: 'April', 5: 'May', 6: 'June',\n",
-    "                                           7: 'July', 8: 'August', 9: 'September', 10: 'October', 11: 'November', 12: 'December'}\n"
+    "mapping = {\n",
+    "    1: \"January\",\n",
+    "    2: \"February\",\n",
+    "    3: \"March\",\n",
+    "    4: \"April\",\n",
+    "    5: \"May\",\n",
+    "    6: \"June\",\n",
+    "    7: \"July\",\n",
+    "    8: \"August\",\n",
+    "    9: \"September\",\n",
+    "    10: \"October\",\n",
+    "    11: \"November\",\n",
+    "    12: \"December\",\n",
+    "}"
    ]
   },
   {
@@ -215,8 +238,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train['month'] = df_train['date'].dt.month\n",
-    "df_test['month'] = df_test['date'].dt.month\n",
+    "df_train[\"month\"] = df_train[\"date\"].dt.month\n",
+    "df_test[\"month\"] = df_test[\"date\"].dt.month\n",
     "# df_train['month'] = df_train['month'].map(mapping)\n",
     "# df_test[\"month\"]  = df_test[\"month\"].map(mapping)"
    ]
@@ -236,9 +259,9 @@
    "outputs": [],
    "source": [
     "y_train = df_train[\"meantemp\"]\n",
-    "X_train = df_train[[\"humidity\", \"wind_speed\", \"meanpressure\",  \"month\"]]\n",
+    "X_train = df_train[[\"humidity\", \"wind_speed\", \"meanpressure\", \"month\"]]\n",
     "y_test = df_test[\"meantemp\"]\n",
-    "X_test = df_test[[\"humidity\", \"wind_speed\", \"meanpressure\", \"month\"]]\n"
+    "X_test = df_test[[\"humidity\", \"wind_speed\", \"meanpressure\", \"month\"]]"
    ]
   },
   {
@@ -252,7 +275,7 @@
     "####  It is possible to combine different Kernels\n",
     "####  My idea is:\n",
     "####     - White Noise kernel: Encodes the variance of the training data (sigma square)\n",
-    "####     - A linear or maybe non-linear trend (gotta do some research): \n",
+    "####     - A linear or maybe non-linear trend (gotta do some research):\n",
     "####           To show general temperature development on earth/ or especially in India. It will definetely be positive due to climate change.. (Let's check what yearly temperature rise we'd expect)\n",
     "####     - Some periodic or seasonal kernel, that shows the temperature differences througout the year\n",
     "####          - Here combine 2 periodic kernels:\n",
@@ -280,7 +303,7 @@
     "## White-Noise-Kernel, combine with RBF kernel to capture smooth and continous variatens over time\n",
     "# noise_level = y_train.std() # no idea if this makes sense...\n",
     "# print(noise_level)\n",
-    "k1 = RBF() + WhiteKernel(noise_level=0.1) #, noise_level_bounds=(0.1**2, 0.5**2) )"
+    "k1 = RBF() + WhiteKernel(noise_level=0.1)  # , noise_level_bounds=(0.1**2, 0.5**2) )"
    ]
   },
   {
@@ -290,7 +313,7 @@
    "outputs": [],
    "source": [
     "## Linear Trend (temperature rise trend per day)\n",
-    "k2 = ConstantKernel(constant_value=0.1)\n"
+    "k2 = ConstantKernel(constant_value=0.1)"
    ]
   },
   {
@@ -300,7 +323,7 @@
    "outputs": [],
    "source": [
     "# Periodic kernel for seasonal variability\n",
-    "# Periodicity (repeats it self after every 90 days? Quartals? Not sure if that might even be 365 days) \n",
+    "# Periodicity (repeats it self after every 90 days? Quartals? Not sure if that might even be 365 days)\n",
     "# length_scale: no idea yet\n",
     "# periodicity bounds: The range in which the temperature usually varies (get that from the data)\n",
     "# k3 = ExpSineSquared(length_scale= 1.0,periodicity=90)#, periodicity_bounds=(12,49))\n",
@@ -335,7 +358,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kernel = k1 + k3 "
+    "kernel = k1 + k3"
    ]
   },
   {
@@ -345,7 +368,9 @@
    "outputs": [],
    "source": [
     "# Here also random hyperparameters (but saw n_restarts_optimizer=10 in several sources)\n",
-    "model = gp.GaussianProcessRegressor(kernel=kernel, n_restarts_optimizer=10, alpha=0.1, normalize_y=True)"
+    "model = gp.GaussianProcessRegressor(\n",
+    "    kernel=kernel, n_restarts_optimizer=10, alpha=0.1, normalize_y=True\n",
+    ")"
    ]
   },
   {
@@ -514,7 +539,9 @@
     }
    ],
    "source": [
-    "df_compare = pd.DataFrame({'date': df_test.loc[test_indices, 'date'], 'True Y': y_test, 'Predicted Y': y_pred})\n",
+    "df_compare = pd.DataFrame(\n",
+    "    {\"date\": df_test.loc[test_indices, \"date\"], \"True Y\": y_test, \"Predicted Y\": y_pred}\n",
+    ")\n",
     "df_compare.head()"
    ]
   },
@@ -535,7 +562,7 @@
     }
    ],
    "source": [
-    "MSE = ((y_pred-y_test)**2).mean()\n",
+    "MSE = ((y_pred - y_test) ** 2).mean()\n",
     "MSE"
    ]
   },
@@ -559,11 +586,11 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Assuming df_compare is the dataframe containing the date column, true y values, and predicted y values\n",
-    "plt.plot(df_compare['date'], df_compare['True Y'], label='True Y')\n",
-    "plt.plot(df_compare['date'], df_compare['Predicted Y'], label='Predicted Y')\n",
-    "plt.xlabel('Date')\n",
-    "plt.ylabel('Temperature')\n",
-    "plt.title('Comparison of Predicted and True Y Values')\n",
+    "plt.plot(df_compare[\"date\"], df_compare[\"True Y\"], label=\"True Y\")\n",
+    "plt.plot(df_compare[\"date\"], df_compare[\"Predicted Y\"], label=\"Predicted Y\")\n",
+    "plt.xlabel(\"Date\")\n",
+    "plt.ylabel(\"Temperature\")\n",
+    "plt.title(\"Comparison of Predicted and True Y Values\")\n",
     "plt.legend()\n",
     "plt.xticks(rotation=45)\n",
     "plt.show()"
@@ -589,23 +616,32 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Assuming y_test, y_pred, gp_std, and date_variable are available\n",
-    "dates = df_test[\"date\"]  # Replace 'date_variable' with the actual date variable from your dataset\n",
+    "dates = df_test[\n",
+    "    \"date\"\n",
+    "]  # Replace 'date_variable' with the actual date variable from your dataset\n",
     "\n",
     "# Plotting the GP mean line\n",
-    "plt.plot(dates, y_pred, color='blue', label='GP Mean')\n",
+    "plt.plot(dates, y_pred, color=\"blue\", label=\"GP Mean\")\n",
     "\n",
     "# Plotting the confidence interval as a shaded region\n",
     "lower_bound = y_pred - 1.96 * std\n",
     "upper_bound = y_pred + 1.96 * std\n",
-    "plt.fill_between(dates, lower_bound, upper_bound, color='lightblue', alpha=0.5, label='Confidence Interval')\n",
+    "plt.fill_between(\n",
+    "    dates,\n",
+    "    lower_bound,\n",
+    "    upper_bound,\n",
+    "    color=\"lightblue\",\n",
+    "    alpha=0.5,\n",
+    "    label=\"Confidence Interval\",\n",
+    ")\n",
     "\n",
     "# Plotting the true values\n",
-    "plt.plot(dates, y_test, color='red', label='True Values')\n",
+    "plt.plot(dates, y_test, color=\"red\", label=\"True Values\")\n",
     "\n",
     "# Setting labels and title\n",
-    "plt.xlabel('Date')\n",
-    "plt.ylabel('Target Variable')\n",
-    "plt.title('GP Predictions with Confidence Interval')\n",
+    "plt.xlabel(\"Date\")\n",
+    "plt.ylabel(\"Target Variable\")\n",
+    "plt.title(\"GP Predictions with Confidence Interval\")\n",
     "plt.legend()\n",
     "\n",
     "# Rotating x-axis tick labels if needed\n",
