--- a/src/GP_Playground.ipynb
+++ b/src/GP_Playground.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,12 +43,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_test = pd.read_csv(\n",
-    "    r\"C:\\Users\\basti\\OneDrive\\Documents\\Prob ML Projekt\\prob-ml-project\\data\\DailyDelhiClimateTest.csv\"\n",
-    ")\n",
-    "df_train = pd.read_csv(\n",
-    "    r\"C:\\Users\\basti\\OneDrive\\Documents\\Prob ML Projekt\\prob-ml-project\\data\\DailyDelhiClimateTrain.csv\"\n",
-    ")"
+    "df_test = pd.read_csv(\"../data/DailyDelhiClimateTest.csv\")\n",
+    "df_train = pd.read_csv(\"../data/DailyDelhiClimateTrain.csv\")"
    ]
   },
   {
@@ -654,9 +650,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "project_env",
+   "display_name": "prob-ml-project-acRXiJBF",
    "language": "python",
-   "name": "project_env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -668,7 +664,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.8.5"
   },
   "orig_nbformat": 4
  },
