--- a/src/GP_Main.ipynb
+++ b/src/GP_Main.ipynb
@@ -61,6 +61,21 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Removal of outliers using interquantile range (IQR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 72,
    "metadata": {},
