added outlier removal to GP_main

--- a/src/GP_Main.ipynb
+++ b/src/GP_Main.ipynb
@@ -65,7 +65,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Removal of outliers using interquantile range (IQR)"
+    "Visulaization of combined data over time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_total = pd.read_csv(\"../data/DailyDelhiClimate.csv\", parse_dates=True, index_col=\"date\")\n",
+    "\n",
+    "fig = plt.figure(figsize=(30, 10))\n",
+    "rows = 2\n",
+    "columns = 2\n",
+    "\n",
+    "ax1 = fig.add_subplot(rows, columns, 1)\n",
+    "ax1.set_title(\"Mean Temperature\")\n",
+    "plt.ylabel(\"Classes\")\n",
+    "df_total[\"meantemp\"].plot()\n",
+    "\n",
+    "ax1 = fig.add_subplot(rows, columns, 2)\n",
+    "ax1.set_title(\"Humidity\")\n",
+    "df_total[\"humidity\"].plot()\n",
+    "\n",
+    "ax1 = fig.add_subplot(rows, columns, 3)\n",
+    "ax1.set_title(\"Wind Speed\")\n",
+    "df_total[\"wind_speed\"].plot()\n",
+    "\n",
+    "ax1 = fig.add_subplot(rows, columns, 4)\n",
+    "ax1.set_title(\"Mean Pressure\")\n",
+    "df_total[\"meanpressure\"].plot()\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Boxplot of data before removal out outliers"
    ]
   },
   {
@@ -74,6 +114,35 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Removal of outliers using interquantile range (IQR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# removal of outliers in the train set\n",
+    "Q1_train = df_train.quantile(0.25)\n",
+    "Q3_train = df_train.quantile(0.75)\n",
+    "IQR_train = Q3_train - Q1_train\n",
+    "\n",
+    "df_train = df_train[~((df_train < (Q1_train - 1.5 * IQR_train)) | (df_train > (Q3_train + 1.5 * IQR_train))).any(axis=1)]\n",
+    "\n",
+    "# removal of outliers in the test set\n",
+    "Q1_test = df_test.quantile(0.25)\n",
+    "Q3_test = df_test.quantile(0.75)\n",
+    "IQR_test = Q3_test - Q1_test\n",
+    "\n",
+    "df_test = df_test[~((df_test < (Q1_test - 1.5 * IQR_test)) | (df_test > (Q3_test + 1.5 * IQR_test))).any(axis=1)]"
+   ]
   },
   {
    "cell_type": "code",
